spacing fix

--- a/app/styles/ui/_tutorial.scss
+++ b/app/styles/ui/_tutorial.scss
@@ -84,7 +84,7 @@
     padding-left: var(--spacing-triple);
     padding-right: var(--spacing);
     .description {
-      margin-bottom: var(--spacing-three-halves);
+      margin-bottom: var(--spacing);
     }
     .button-component {
       margin-right: var(--spacing);
